Enhance Butler AI skillset with MCP installation script and sync functionality. Updated .gitignore to include MCP config files, refined readme for clarity on installation and usage, and added GitHub workflows for release and skills parity checks. Improved opencode.jsonc structure and added allowed tools for Zepto automation skill.

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ temp
 .github/skills/*
 !.github/skills/zepto-automation/
 !.github/skills/zepto-automation/**
+
+# Installer-generated MCP configs (run ./scripts/install-mcp)
+.cursor/mcp.json
+.codex/mcp.json
