--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -1,23 +1,23 @@
 {
-    "$schema": "https://opencode.ai/config.json",
-    "mcp": {
-      "playwriter": {
-        "type": "local",
-        "command": ["bunx", "-y", "playwriter@latest"],
-        "enabled": true,
-      },
-      "next-devtools": {
-        "type": "local",
-        "command": ["bunx", "-y", "next-devtools-mcp@latest"],
-        "environment": {
-          "NEXT_TELEMETRY_DISABLED": "1",
-        },
-      },
-      "convex": {
-        "type": "local",
-        "command": ["bunx", "-y", "convex@latest", "mcp", "start"],
-        "enabled": true,
-      },
+  "$schema": "https://opencode.ai/config.json",
+  "mcp": {
+    "playwriter": {
+      "type": "local",
+      "command": ["bunx", "-y", "playwriter@latest"],
+      "enabled": true
     },
+    "next-devtools": {
+      "type": "local",
+      "command": ["bunx", "-y", "next-devtools-mcp@latest"],
+      "environment": {
+        "NEXT_TELEMETRY_DISABLED": "1"
+      },
+      "enabled": true
+    },
+    "convex": {
+      "type": "local",
+      "command": ["bunx", "-y", "convex@latest", "mcp", "start"],
+      "enabled": true
+    }
   }
-  
+}
